// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardButton renders custom color 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  cursor: pointer;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-1,
[data-css-1] {
  background-color: #f0f0f0;
  border: none;
  transition: 500ms ease-in-out;
  -webkit-transition: 500ms ease-in-out;
  -moz-transition: 500ms ease-in-out;
}

.css-1:focus,
[data-css-1]:focus,
.css-1[data-simulate-focus],
[data-css-1][data-simulate-focus] {
  outline: none;
}

.css-1:hover,
[data-css-1]:hover,
.css-1[data-simulate-hover],
[data-css-1][data-simulate-hover] {
  cursor: pointer;
  background: #d9d9d9;
}

<button
  data-css-1=""
  data-css-0=""
  onClick={[Function]}
>
  Click me
</button>
`;

exports[`CardButton renders without error 1`] = `
.css-0,
[data-css-0] {
  background-color: #3598db;
  border: none;
  transition: 500ms ease-in-out;
  -webkit-transition: 500ms ease-in-out;
  -moz-transition: 500ms ease-in-out;
}

.css-0:focus,
[data-css-0]:focus,
.css-0[data-simulate-focus],
[data-css-0][data-simulate-focus] {
  outline: none;
}

.css-0:hover,
[data-css-0]:hover,
.css-0[data-simulate-hover],
[data-css-0][data-simulate-hover] {
  cursor: pointer;
  background: #227dbf;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  cursor: pointer;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

<button
  data-css-0=""
  data-css-7=""
  onClick={[Function]}
>
  Click me
</button>
`;
